Testing isolated graphs for reducibility